# DobryDo

./: README.md  __main__.py  main.py  pyproject.toml  ruff.toml
.github/workflows/: dev.yml  main.yml
dobrydo/: __init__.py  cli.py  db.py  tasks.py
dobrydo/commands/: __init__.py  task_command.py
dobrydo/db/: __init__.py  db.py
dobrydo/models/: __init__.py  task.py
dobrydo/tools/: tasks.py
